--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -47,7 +47,7 @@ body {
 	        box-shadow: 0 0 0.3em #255b17;
 }
 
-#grailsLogo {
+#capptainLogo {
 	background-color: #abbf78;
 }
 
@@ -89,7 +89,7 @@ img {
 
 /* GENERAL */
 
-#grailsLogo a {
+#capptainLogo a {
 	display: inline-block;
 	margin: 1em;
 }
